# bet-maker

./: .env-example  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
docker/: app.sh
dumps/: init.sql
src/: alembic.ini  main.py
src/api/: bets.py  events.py
src/db/migrations/: env.py
src/db/migrations/versions/: 11094ad32a9e_initial_migration.py
src/db/models/: bets.py  events.py
src/db/repositories/: base.py  bets.py  events.py
src/db/utils/: base.py
src/dto/: bets.py  events.py
src/services/: bets.py  events.py
src/settings/: config.py
src/utils/: unit_of_work.py
