[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = "simple betting api"
authors = ["Tamique"]
readme = "README.md"
packages = [{include = "bet_maker"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
